--- a/.github/workflows/start-release.yml
+++ b/.github/workflows/start-release.yml
@@ -31,11 +31,11 @@ jobs:
 
           # Use the current version if it is not being overridden
           if [ -z "${{ github.event.inputs.version }}" ]; then
-            echo "release=$(sed -e 's@^v@@g' <VERSION)" >> $GITHUB_STATE
+            echo "release=$(sed -e 's@^v@@g' <VERSION)" >> $GITHUB_OUTPUT
 
           # Otherwise, the use the overridden version.
           else
-            echo "release=${{ github.event.inputs.version }}" >> $GITHUB_STATE
+            echo "release=${{ github.event.inputs.version }}" >> $GITHUB_OUTPUT
           fi
 
       # START THE RELEASE
