--- a/action.yml
+++ b/action.yml
@@ -114,7 +114,7 @@ runs:
       uses: vsoch/pull-request-action@1.1.0
       env:
         GITHUB_TOKEN: "${{ inputs.github_token }}"
-        BRANCH_PREFIX: "${{ inputs.is_hotfix && hotfix/ || release/ }}"
+        BRANCH_PREFIX: "${{ inputs.is_hotfix && 'hotfix/' || 'release/' }}"
         PULL_REQUEST_FROM_BRANCH: "${{ inputs.is_hotfix && steps.validate.outputs.hotfix_branch || steps.validate.outputs.release_branch }}"
         PULL_REQUEST_BRANCH: "${{ inputs.target_ref }}"
         PULL_REQUEST_TITLE: "Release ${{ steps.validate.outputs.release_tag }}"
